--- a/opdracht6_2/_codelite.project
+++ b/opdracht6_2/_codelite.project
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<CodeLite_Project Name="opdracht6_1" InternalType="Console">
+<CodeLite_Project Name="opdracht6_2" InternalType="Console">
   <Plugins>
     <Plugin Name="qmake">
       <![CDATA[00010001N0005Debug000000000000]]>
@@ -21,8 +21,12 @@
   <Dependencies/>
   <VirtualDirectory Name="src">
     <File Name="main.cpp"/>
-    <File Name="filledrectangle.cpp"/>
-    <File Name="filledrectangle.hpp"/>
+    <File Name="circle.cpp"/>
+    <File Name="circle.hpp"/>
+    <File Name="line.cpp"/>
+    <File Name="line.hpp"/>
+    <File Name="rectangle.cpp"/>
+    <File Name="rectangle.hpp"/>
     <File Name="window.cpp"/>
     <File Name="window.hpp"/>
   </VirtualDirectory>
