--- a/opdracht6_2/_codelite.project
+++ b/opdracht6_2/_codelite.project
@@ -29,8 +29,8 @@
     <File Name="rectangle.hpp"/>
     <File Name="window.cpp"/>
     <File Name="window.hpp"/>
-    <File Name="trein.cpp"/>
-    <File Name="trein.hpp"/>
+    <File Name="train.cpp"/>
+    <File Name="train.hpp"/>
   </VirtualDirectory>
   <Settings Type="Executable">
     <GlobalSettings>
