Opdracht 6.2 zo goed als af, nu als huisje

--- a/opdracht6_2/_codelite.project
+++ b/opdracht6_2/_codelite.project
@@ -29,8 +29,10 @@
     <File Name="rectangle.hpp"/>
     <File Name="window.cpp"/>
     <File Name="window.hpp"/>
-    <File Name="train.cpp"/>
-    <File Name="train.hpp"/>
+    <File Name="house.hpp"/>
+    <File Name="house.cpp"/>
+    <File Name="../opdracht6_1/filledrectangle.cpp"/>
+    <File Name="../opdracht6_1/filledrectangle.hpp"/>
   </VirtualDirectory>
   <Settings Type="Executable">
     <GlobalSettings>
